--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<main>
 		<section>
 			<h2>Welcome to My Website!</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat semper sapien, in placerat elit malesuada in. Duis scelerisque lectus euismod, mattis arcu sed, laoreet arcu. Ut vel consectetur lacus. Nulla facilisi. Sed non enim euismod, dapibus purus eu, consequat justo. </p>
+			<p>I created this page for ITSE 1311 Scriping class. </p>
 		</section>
 		<section>
 			<h2>About Me</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat semper sapien, in placerat elit malesuada in. Duis scelerisque lectus euismod, mattis arcu sed, laoreet arcu. Ut vel consectetur lacus. Nulla facilisi. Sed non enim euismod, dapibus purus eu, consequat justo.</p>
+			<p>I am learning CSS and HTML</p>
 		</section>
 		<section>
 			<h2>My Services</h2>
