--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<main>
 		<section>
 			<h2>Welcome to My Website!</h2>
-			<p>I created this page for ITSE 1311 Scriping class. </p>
+			<p>I created this page for ITSE 1311 Scripting class. </p>
 		</section>
 		<section>
 			<h2>About Me</h2>
